# GymApp

./: .bandit  .env.dist  .gitignore  Dockerfile  README.md  apitest.http  docker-compose.yml  pyproject.toml
.github/workflows/: gymapp.yml
API/: calculators.py  serializers.py  tests.py  urls.py  views.py
GymApp/: env.py  forms.py  settings.py  urls.py  wsgi.py
accounts/: forms.py
accounts/API/: serializers.py  tests.py  urls.py  views.py
calculators/API/: serializers.py  tests.py  urls.py  views.py
dashboard/: apps.py  const.py  mixins.py  urls.py  views.py
dashboard/templates/dashboard/: add_exercise.html  auth_base.html  base.html  calculator.html  calculator_result.html  confirm_delete.html  exercise_create.html  (+17 more)
dashboard/urls/: auth.py  calculator.py  exercise.py  history.py  record.py  training_plan.py
dashboard/views/: auth.py  calculator.py  exercise.py  history.py  record.py  training_plan.py
trainings/: admin.py  forms.py  models.py
trainings/API/: serializers.py  urls.py
trainings/migrations/: 0001_initial.py  0002_exercise_usertrainingplans.py  0003_category_training.py  0004_trainingrecord.py  0005_remove_exercise_body_part_exercise_body_part.py  0006_trainingplanexerciseinfo_trainingexercise_and_more.py  0007_alter_usertrainingplans_exercises.py  0008_trainingexercise_exercise_and_more.py  0009_remove_usertrainingplans_exercises_and_more.py  0010_alter_trainingplanexerciseinfo_exercise_and_more.py  0011_trainingplanexerciseinfo_ordering.py  0012_remove_trainingplanexerciseinfo_ordering.py  0013_trainingplanexerciseinfo_ordering.py
(+26 files in other folders)
