[tool.poetry]
name = "gymapp"
version = "0.1.0"
description = ""
authors = ["xMati278 <59803172+xMati278@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-bootstrap4 = "^23.4"
django-extensions = "^3.2.3"
django-environ = "^0.11.2"
bandit = "^1.7.7"
safety = "^3.0.1"
ruff = "^0.2.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
coverage = "^7.6.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
